# Python_Django_Review

./: README.md  django_full_tutorial.md
django-shop/: .env.example  pyproject.toml
django-shop/config/: settings.py  urls.py
django-shop/products/: admin.py  models.py  urls.py  views.py
django-shop/products/migrations/: 0001_initial.py  0002_product_published_at_product_status_and_more.py
django-shop/static/css/: products.css
django-shop/templates/products/: about.html
